fix(input): avoid overflow cutting of addons in ie11 (#342)

--- a/src/input/input.css
+++ b/src/input/input.css
@@ -203,6 +203,7 @@
 
     &__addons {
         display: flex;
+        flex-shrink: 0; /* Avoid overflow cutting of addons in IE11 */
         align-items: center;
     }
 
